Add location vs property option
